# VERTEX

./: .breakpoints  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .replit  AdministeredTreatments_Treatments.py  ClinicalPresentation_Comorbidities.py  ClinicalPresentation_Demographics.py  ClinicalPresentation_Signs.py  Dockerfile  IsaricAnalytics.py  IsaricDraw.py  LICENSE.md  PatientCharacteristics.py  README.md  SECURITY.md  SymptomsComorbidities.py  Treatments.py  TreatmentsNew.py  UserDraw.py  VarScreening.py  baseModal.py  codecov.yml  config_loader.py  descriptive_dashboard.py  descriptive_dashboard_public.py  genericPanel.py  getREDCapData.py  pylock.toml  pyproject.toml  redcap_config.py  replit.nix  replit_zip_error_log.txt  requirements.txt  risk_factors.py  risk_feature_outcome.py  run_local.sh
.github/actions/validate-analysis-projects/: action.yml  validate_analysis_projects.py
.github/actions/validate-project-outputs/: action.yml  validate_project_outputs.py
.github/workflows/: build.yaml  deploy.yml  lint.yml  test-and-coverage.yml  test.yml  validate-project-outputs.yml
.upm/: store.json
assets/: conversion_table.csv  style.css
demo-projects/ARChetypeCRF_dengue_synthetic/: config_file.json
demo-projects/ARChetypeCRF_dengue_synthetic/insight_panels/: enrolment_details.py  outcomes_complications.py  presentation_demogcomor.py  presentation_symptoms.py  treatments_interventions.py
demo-projects/ARChetypeCRF_h5nx_synthetic/: config_file.json
demo-projects/ARChetypeCRF_h5nx_synthetic/insight_panels/: enrolment_details.py  outcomes_complications.py  presentation_demogcomor.py  presentation_symptoms.py  treatments_interventions.py
demo-projects/ARChetypeCRF_h5nx_synthetic_mf/: config_file.json
demo-projects/ARChetypeCRF_h5nx_synthetic_mf/insight_panels/: enrolment_details.py  modelling_featureselection.py  modelling_lengthofstay.py  modelling_riskfactors.py  modelling_survivalanalysis.py  outcomes_complications.py  presentation_demogcomor.py  presentation_labs.py  presentation_symptoms.py  treatments_interventions.py
demo-projects/ARChetypeCRF_h5nx_synthetic_mf/outputs/: config_file.json
demo-projects/ARChetypeCRF_mpox_synthetic/: config_file.json
demo-projects/ARChetypeCRF_mpox_synthetic/analysis_data/: daily.csv  df_map.csv  follow_up.csv  medication.csv  outcome.csv  pathogen_testing.csv  photographs.csv  presentation.csv  quality_report.json  vertex_dictionary.csv  withdrawal.csv
demo-projects/ARChetypeCRF_mpox_synthetic/insight_panels/: enrolment_details.py  lesion_assessment.py  outcomes_complications.py  presentation_demogcomor.py  presentation_symptoms.py  treatments_interventions.py
docs/: conf.py  getting-started.rst  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/sources/: api-reference.rst  app.rst  cli.rst  contributors.rst  getting-started.rst
docs/sources/vertex/: cli.rst  descriptive-analytics.rst
insight_panels/: ClinicalPresentation_Day0.py  ClinicalPresentation_DemographicsComorbidities.py  ClinicalPresentation_Exposure.py  ClinicalPresentation_PregInfant.py  ClinicalPresentation_SignsSymptoms.py  Enrolment_EnrolmentDetail.py  Examples_Generic.py  Outcomes_ComplicationsOutcomes.py  Outcomes_DiseaseProgression.py  RiskFactors_InHospitalMortality.py  Treatments_InterventionsTreatments.py  __init__.py
layout/: modals.py
projects/ARChetypeCRF_dengue_synthetic/: config_file.json
projects/ARChetypeCRF_dengue_synthetic/PUBLIC/: config_file.json  dashboard_metadata.json  public_config_file.json  requirements.txt
projects/ARChetypeCRF_dengue_synthetic/insight_panels/: enrolment_details.py  outcomes_complications.py  presentation_demogcomor.py  presentation_symptoms.py  treatments_interventions.py
projects/ARChetypeCRF_dengue_synthetic/outputs/: dashboard_data.csv
projects/ARChetypeCRF_h5nx_synthetic/: config_file.json
projects/ARChetypeCRF_h5nx_synthetic/PUBLIC/: IsaricDraw.py  config_file.json  dashboard_data.csv  dashboard_metadata.json  descriptive_dashboard_public.py  public_config_file.json
projects/ARChetypeCRF_h5nx_synthetic/insight_panels/: enrolment_details.py  (+4 more)
projects/ARChetypeCRF_h5nx_synthetic_mf/: config_file.json
projects/ARChetypeCRF_mpox_synthetic/: config_file.json
projects/Bubo_Images/: config_file.json  dashboard_data.csv  dashboard_metadata.json
projects/Dengue_ICU/: config_file.json  dashboard_data.csv  dashboard_metadata.json
projects/Examples_Tutorial/: Modelling_FeatureSelection.py  config_file.json
projects/Fiebre_Amarilla/: config_file.json  dashboard_data.csv  dashboard_metadata.json
projects/H5Nx_Synthetic/: config_file.json  dashboard_metadata.json
projects/NewProject/: config_file.json
projects/SIVIGILA/: config_file.json  dashboard_data.csv  dashboard_metadata.json
projects/dengue test/: config_file.json  dashboard_metadata.json
projects/rvfd_synthetic/: config_file.json
scripts/: install_projects_sync_cron.sh  sync_projects_repo.sh
tests/: conftest.py  test_analysis_project_validator.py  test_callbacks.py  test_io.py  test_map_filters.py  test_playwright_smoke.py  test_prebuilt_project_loading.py  test_project_contracts.py  test_roundtrip_layout.py  test_static_loading.py
tests/fixtures/: README.md
tests/frontend-smoke/: test_playwright_smoke.py
tests/unit/: test_analytics.py  test_callbacks.py  test_io.py  test_legacy_module_shims.py  test_project_access.py  test_project_contracts.py  test_project_ingestion.py  test_project_output_validator.py  test_roundtrip_layout.py
vertex/: IsaricAnalytics.py  IsaricDraw.py  __init__.py  cli.py  database.py  descriptive_analytics.py  descriptive_dashboard.py  descriptive_dashboard_public.py  getREDCapData.py  io.py  loader.py  map.py  models.py  project_access.py  project_ingestion.py  secrets.py  secrets_app.py  translation.py  vertex_secrets.py
vertex/assets/: instructions.txt
vertex/auth/: __init__.py  routes.py  service.py
vertex/layout/: app_layout.py  build_dashboard.py  filters.py  footer.py  insight_panels.py  menu.py  modals.py
vertex/logging/: logger.py
(+676 files in other folders)
