[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["vertex"]

[project]
name = "isaric-vertex"
version = "1.0.0"
description = "Dash-based VERTEX dashboard for ISARIC"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3==1.39.1",
    "click>=8.1",
    "dash==3.4.0",
    "dash-bootstrap-components==2.0.4",
    "Flask==3.1.3",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.0.2",
    "Flask-Security-Too==5.6.2",
    "gunicorn",
    "kaleido==1.0.0",  # Kaleido v1.0.0 fixes an issue with image exports on Windows (see https://github.com/plotly/Kaleido/issues/300)
    "lifelines==0.30.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==6.1.1",
    "psycopg2-binary==2.9.10",
    "requests>=2.32.4",
    "scikit-learn==1.5.2",
    "scipy==1.12.0",
    "SQLAlchemy==2.0.43",
    "statsmodels==0.14.1",
]

[project.scripts]
run-vertex = "descriptive_dashboard:main"
descriptive-analytics = "vertex.descriptive_analytics:main"

[tool.ruff]

line-length = 128
target-version = "py311"

lint.select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, warnings, import sorting

# Optional: exclude certain paths
exclude = [
    ".venv",
    "build",
    "dist"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
