[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["vertex"]

[project]
name = "isaric-vertex"
dynamic = ["version"]
description = "Dash-based VERTEX dashboard for ISARIC"

# All current contributors
authors = [
    { name = "Esteban Garcia-Gallo", email = "esteban.garcia@ndm.ox.ac.uk" },
    { name = "Alasdair Wilson", email = "alasdair.wilson@dtc.ox.ac.uk" },
    { name = "Tom Edinburgh", email = "tom.edinburgh@ndm.ox.ac.uk" },
    { name = "Leonardo Bastos",  email = "lslbastos@puc-rio.br" },
    { name = "Igor Peres", email = "igor.peres@puc-rio.br" },
    { name = "Luiz Eduardo Raffaini", email = "lemraffaini@gmail.com" },
    { name = "Sara Duque-Vallejo", email = "sara.duquevallejo@ndm.ox.ac.uk" },
    { name = "Laura Merson", email = "laura.merson@ndm.ox.ac.uk" },
    { name = "Elise Pesonel", email = "elise.pesonel@ndm.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" }
]

# All current project admins
maintainers = [
    { name = "Esteban Garcia-Gallo", email = "esteban.garcia@ndm.ox.ac.uk" },
    { name = "Alasdair Wilson", email = "alasdair.wilson@ndm.ox.ac.uk" },
    { name = "Tom Edinburgh", email = "tom.edinburgh@ndm.ox.ac.uk" },
    { name = "Sara Duque-Vallejo", email = "sara.duquevallejo@ndm.ox.ac.uk" },
    { name = "Sandeep Murthy", email = "sandeep.murthy@ndm.ox.ac.uk" }
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.39.1",
    "click>=8.1",
    "dash==3.4.0",
    "dash-bootstrap-components==2.0.4",
    "Flask==3.1.3",
    "Flask-Login==0.6.3",
    "Flask-SQLAlchemy==3.0.2",
    "Flask-Security-Too==5.6.2",
    "gunicorn",
    "isaricanalytics@git+https://github.com/ISARICResearch/ISARICAnalytics",
    "kaleido==1.0.0", # Kaleido v1.0.0 fixes an issue with image exports on Windows (see https://github.com/plotly/Kaleido/issues/300)
    "lifelines==0.30.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==6.1.1",
    "psycopg2-binary==2.9.10",
    "requests>=2.32.4",
    "scikit-learn==1.5.2",
    "scipy>=1.12.0",
    "SQLAlchemy==2.0.43",
    "statsmodels>=0.14.1",
    "pyjwt>=2.8",
    "cryptography>=46.0.7",
]

[project.optional-dependencies]
# Deps specific to the pre-commit checks
pre-commit = [
    "pre-commit",
]

# Deps specific to the unit tests
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Deps specific to the frontend smoke tests
frontend-smoke-tests = [
    "pytest>=8.0",
    "playwright>=1.58.0",
]

# Deps specific to the Sphinx docs
docs = [
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-design",
    "myst-parser",
    "pylint",
    "furo",
    "numpydoc",
    "nb2plots",
    "jupyter-sphinx"
]

[project.scripts]
run-vertex = "descriptive_dashboard:main"
descriptive-analytics = "vertex.descriptive_analytics:main"

[tool.setuptools.dynamic]
version = {attr = "vertex.__version__"}

[tool.ruff]

line-length = 128
target-version = "py311"

lint.select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, warnings, import sorting

# Optional: exclude certain paths
exclude = [
    ".venv",
    "build",
    "dist"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: browser-based end-to-end smoke tests",
]
